# Qt4test

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md  WINDOWS_BUILD.md  installer.nsi  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  run.sh  todo.md
.github/workflows/: build-macos.yml  build-windows.yml
database/: dbmanager.cpp  dbmanager.h
docs/: aliyun-imgupload.md  gemini_api_pic-video.md  gemini_gen_pic_api.md  grok-api.md  img-upload-imgbb.md  implementation-summary-grok3-params.md  implementation-summary.md  kling_api-i2v-t2v.md  release-preflight.md  sora-2-openai.md  sora-2-pro-api.md  veo3-api-openai.md  veo3-api-video-unification.md  veo3-api.md  veo3-gogole.md  wan_api_2.6.md  wanx-video-effects.md  升级配置手册.md  项目UI说明.md
docs/plans/: 2026-03-09-video-history-async-polling-design.md  2026-03-09-video-history-async-polling.md  2026-03-09-video-history-table-improvements.md  2026-03-16-about-check-version-button.md
docs/superpowers/plans/: 2026-03-18-fix-image-reference-index.md  2026-03-18-image-validation-retry.md  2026-03-24-sora2-single-video-integration.md  2026-04-01-history-list-download-button.md
docs/superpowers/specs/: 2026-03-15-auto-update-design.md  2026-04-01-history-list-download-button-design.md
network/: imageapi.cpp  imageapi.h  imageuploader.cpp  imageuploader.h  taskpollmanager.cpp  taskpollmanager.h  updatemanager.cpp  updatemanager.h  veo3api.cpp  veo3api.h  videoapi.cpp  videoapi.h
releases/: version.json
resources/: app.icns
scripts/: release_preflight_check.sh
styles/: glassmorphism.qss  light.qss
widgets/: aboutwidget.cpp  aboutwidget.h  configwidget.cpp  configwidget.h  grokgen.cpp  grokgen.h  helpwidget.cpp  helpwidget.h  imagegen.cpp  imagegen.h  imagehistory.cpp  imagehistory.h  sora2genpage.cpp  sora2genpage.h  veogen.cpp  veogen.h  videogen.cpp  videogen.h  wangen.cpp  wangen.h
